<resources>
    <string name="app_name">Lessons In Life</string>

    <string name="admob_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>


      <!--
       <string name="admob_banner_main">@string/admob_test_banner_id</string>
       <string name="admob_banner_quote">@string/admob_test_banner_id</string>
       <string name="admob_banner_preview">@string/admob_test_banner_id</string>
       <string name="admob_banner_list">@string/admob_test_banner_id</string>
       <string name="admob_banner_favorite">@string/admob_test_banner_id</string>
       <string name="admob_banner_image">@string/admob_test_banner_id</string>
       <string name="admob_banner_picture">@string/admob_test_banner_id</string>

       <string name="admob_interstitial_id">@string/admob_test_interstitial_id</string>

      -->

     <string name="admob_banner_main">ca-app-pub-6150813452529727/6899021706</string>
     <string name="admob_banner_quote">ca-app-pub-6150813452529727/8020531684</string>
     <string name="admob_banner_preview">ca-app-pub-6150813452529727/145512339</string>
     <string name="admob_banner_list">ca-app-pub-6150813452529727/2576633313</string>
     <string name="admob_banner_favorite">ca-app-pub-6150813452529727/2385061621</string>
     <string name="admob_banner_image">@string/admob_test_banner_id</string>

     <string name="admob_interstitial_id">ca-app-pub-3112561146803951/2236887815</string>




    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="share_button">share</string>
    <string name="copy_button">copy</string>
    <string name="change_font">Change font</string>
    <string name="change_background">Change background</string>
    <string name="bookmark">Bookmark</string>
    <string name="background_image">Background image</string>
    <string name="favorites">Favorites</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>

    <string name="app_share_message">"Hi! Take a look at this amazing app Lessons In Life. Its free!! You should get it too."</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="company_email">sarftecsolutions111@gmail.com</string>
    <string name="developer_indentification">Developed by Sarftec</string>
    <string name="setting_up">Preparing Lessons</string>

    <string name="appodeal_id">9c6e90ba3bdf280e8c88ed177c58860121426740fe0c8235</string>\

    <string name="reader_alignment">Alignment</string>
    <string name="reader_background">Background</string>
    <string name="reader_text_size">Text size</string>
    <string name="reader_theme">Text color</string>
    <string name="reader_font">Font style</string>
    <string name="reader_bg_opacity">Opacity</string>
    <string name="reader_opacity">Opacity</string>

    <dimen name="detail_panel_background_icon_size">22dp</dimen>
    <dimen name="detail_panel_background_icon_margin">16dp</dimen>
    <dimen name="icon_detail_edit_size">26dp</dimen>
    <dimen name="icon_detail_lower_saving_size">26dp</dimen>
    <dimen name="icon_detail_lower_normal_size">26dp</dimen>
    <dimen name="icon_detail_lower_normal_margin_right">16dp</dimen>
    <dimen name="icon_detail_lower_margin_left">18dp</dimen>
    <dimen name="layout_detail_lower_height">60dp</dimen>
    <dimen name="icon_detail_lower_margin_right">18dp</dimen>
    <dimen name="detail_image_item_size">100dp</dimen>

</resources>