<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_love_filled" />

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/ic_share" />

            <item
                android:id="@+id/rate"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_rate_us" />

            <item
                android:id="@+id/more_apps"
                android:title="@string/more_apps"
                android:icon="@drawable/ic_more_apps" />
        </menu>
    </item>
</menu>