<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/transparent_dark_layer"
        app:layout_constraintBottom_toTopOf="@+id/main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/vp_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/view_pager_button"
            android:clickable="true"
            android:contentDescription="@string/change_background"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_change_background"
            app:tint="@color/view_pager_icon" />

        <ImageButton
            android:id="@+id/vp_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/view_pager_button"
            android:clickable="true"
            android:contentDescription="@string/change_font"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_text_font"
            app:tint="@color/view_pager_icon" />

        <ImageButton
            android:id="@+id/vp_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/view_pager_button"
            android:clickable="true"
            android:contentDescription="@string/bookmark"
            android:focusable="true"
            android:padding="10dp"
            app:tint="@color/view_pager_icon"
            tools:srcCompat="@drawable/ic_love_borderless" />

        <ImageButton
            android:id="@+id/vp_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/view_pager_button"
            android:clickable="true"
            android:contentDescription="@string/share_button"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_share"
            app:tint="@color/view_pager_icon" />

        <ImageButton
            android:id="@+id/vp_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/view_pager_button"
            android:clickable="true"
            android:contentDescription="@string/copy_button"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_copy"
            app:tint="@color/view_pager_icon" />
    </LinearLayout>

    <com.appodeal.ads.BannerView
        android:id="@+id/main_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="50dp"
        tools:visibility="visible"
        tools:background="@color/teal_200"/>
</androidx.constraintlayout.widget.ConstraintLayout>