<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="binding"
            type="com.sarftec.lessonsinlife.presentation.binding.FavoriteListBinding" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/quote_card_top_section"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> binding.clicked()}">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/quote_list_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/quicksand_bold"
                    android:maxLines="4"
                    android:padding="10dp"
                    android:text="@{binding.quote.message}"
                    android:textAlignment="center"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonLayout"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/delete_favourite_quote_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/remove_from_bookmarks"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.delete()}"
                    app:tint="@color/color_primary"
                    app:srcCompat="@drawable/ic_delete"
                    android:layout_marginLeft="20dp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/quote_share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="?attr/actionBarItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.share()}"
                    android:contentDescription="@string/share_button"
                    app:tint="@color/color_primary"
                    app:srcCompat="@drawable/ic_share"
                    android:layout_marginLeft="20dp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/quote_copy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="?attr/actionBarItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.copy()}"
                    android:contentDescription="@string/copy_button"
                    app:tint="@color/color_primary"
                    app:srcCompat="@drawable/ic_copy"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>